--- a/.github/workflows/HTMLValidate.yml
+++ b/.github/workflows/HTMLValidate.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2      
       - name: HTML5Validator
-        uses: Cyb3r-Jak3/html5validator-action
+        uses: Cyb3r-Jak3/html5validator-action@v7.0.0
         with:
           root: ./source/public
           blacklist: invalid
