Update unit testing CI (#38)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
 #
 
-name: Linter
+name: Lint Source Code
 
 # Start job on pushes with changes to JS files
 on:
