--- a/source/package.json
+++ b/source/package.json
@@ -4,8 +4,8 @@
   "description": "Recipe manager",
   "main": "index.js",
   "scripts": {
-    "jsdoc": "./node_modules/.bin/jsdoc public -r -d docs",
-    "test": "jest"
+    "jsdoc": "jsdoc public -r -d docs",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,11 @@
   },
   "homepage": "https://github.com/cse110-fa21-group5/cse110-fa21-group5#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "eslint": "^8.1.0",
-    "jest": "^27.3.1",
-    "jsdoc": "^3.6.7"
-  },
-  "dependencies": {
-    "babel-jest": "^27.3.1",
-    "ts-jest": "^27.0.7"
+    "jest": "^27.4.2",
+    "jsdoc": "^3.6.7",
+    "luxon": "^2.1.1"
   }
 }
