Add pipeline phase 1 submission (v1)

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
     test:
+        name: Jest
         runs-on: ubuntu-latest
         defaults:
             run:
@@ -16,9 +17,11 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
+
             - name: Use Node.js
               uses: actions/setup-node@v1
               with:
                   node-version: '14'
+                  
             - run: npm install
             - run: npm test
