--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -1,6 +1,11 @@
 name: Generate Documentation
 
-on: pull_request
+# on: pull_request
+on:
+    push:
+        paths:
+            - '.github/workflows/**'
+            - 'source/**.js'
 
 jobs:
     generate:
