--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -33,7 +33,7 @@ jobs:
             - run: npm install --save-dev jsdoc-to-markdown
 
             - name: Compile JSDoc Files
-              run: jsdoc2md source/public/scripts/util.js > "wiki-pages/JSDoc - util.js"
+              run: npx -c 'jsdoc2md source/public/scripts/util.js' > "wiki-pages/JSDoc - util.js"
 
             - name: Upload Files to Wiki
               uses: SwiftDocOrg/github-wiki-publish-action@v1
