--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -4,7 +4,7 @@ name: Generate Documentation
 on:
     push:
         paths:
-            - '.github/workflows/**'
+            - '.github/workflows/generate-documentation.yml'
             - 'source/**.js'
 
 jobs:
