Test wiki workflow

--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -4,7 +4,7 @@ name: Generate Wiki
 on:
     push:
         paths:
-            - '.github/workflows/generate-wiki*'
+            - '.github/workflows/*wiki*'
             - 'admin/team.md'
             - 'admin/cipipeline/phase1.md'
             - 'source/README.md'
