--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -23,7 +23,7 @@ jobs:
                   mkdir wiki-pages
                   cp admin/team.md wiki-pages/Team.md
                   cp admin/cipipeline/phase1.md wiki-pages/Pipeline.md
-                  cp source/README.md "wiki-pages/Development Guidelines.md"
+                  cp source/README.md wiki-pages/Development-Guidelines.md
 
             - name: Use Node.js
               uses: actions/setup-node@v1
@@ -34,7 +34,7 @@ jobs:
               run: |
                   npm init -y
                   npm install --save-dev jsdoc-to-markdown
-                  npx -c 'jsdoc2md source/public/scripts/util.js' > "wiki-pages/JSDoc - util.js"
+                  npx -c 'jsdoc2md source/public/scripts/util.js' > wiki-pages/JSDoc-util.js
 
             - name: Upload Files to Wiki
               uses: SwiftDocOrg/github-wiki-publish-action@v1
