--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -1,8 +1,9 @@
 name: Generate Documentation
 
-# on: pull_request
 on:
     push:
+        branches: 
+            - main
         paths:
             - '.github/workflows/generate-documentation.yml'
             - 'source/**.js'
