Test JSDoc workflow

--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -15,7 +15,8 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v2
-
+              with:
+                  token: {{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
             - name: Compile Docs
               uses: andstor/jsdoc-action@v1
               with:
