--- a/source/package.json
+++ b/source/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "jsdoc": "jsdoc public -r -d docs",
-    "test": "jest --coverage",
+    "test": "jest",
     "lint": "eslint --fix public/**/*.js"
   },
   "repository": {
@@ -20,10 +20,18 @@
   "homepage": "https://github.com/cse110-fa21-group5/cse110-fa21-group5#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@testing-library/jest-dom": "^5.16.1",
+    "babel-jest": "^27.4.2",
     "eslint": "^8.1.0",
-    "jest": "^27.4.2",
+    "jest": "^27.4.3",
+    "jest-puppeteer": "^6.0.2",
     "jsdoc": "^3.6.7",
-    "luxon": "^2.1.1"
+    "luxon": "^2.1.1",
+    "puppeteer": "^12.0.1"
+  },
+  "dependencies": {
+    "regenerator-runtime": "^0.13.9"
   }
 }
