--- a/source/.eslintrc.json
+++ b/source/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": "eslint:recommended",
-    "ignorePatterns": ["/*.js", "/docs/**/*.js"],
+    "ignorePatterns": ["/*.js", "/docs/**/*.js", "/cypress/**/*.js"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
