--- a/source/package.json
+++ b/source/package.json
@@ -4,6 +4,7 @@
   "description": "Recipe manager",
   "main": "index.js",
   "scripts": {
+    "cypress": "cypress open",
     "jsdoc": "jsdoc public -r -d docs",
     "test": "jest",
     "lint": "eslint --fix public/**/*.js"
@@ -20,18 +21,11 @@
   "homepage": "https://github.com/cse110-fa21-group5/cse110-fa21-group5#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
-    "@testing-library/jest-dom": "^5.16.1",
-    "babel-jest": "^27.4.2",
+    "cypress": "^9.1.1",
     "eslint": "^8.1.0",
     "jest": "^27.4.3",
-    "jest-puppeteer": "^6.0.2",
     "jsdoc": "^3.6.7",
-    "luxon": "^2.1.1",
-    "puppeteer": "^12.0.1"
-  },
-  "dependencies": {
-    "regenerator-runtime": "^0.13.9"
+    "luxon": "^2.1.1"
   }
 }
