--- a/source/.eslintrc.json
+++ b/source/.eslintrc.json
@@ -13,7 +13,7 @@
         "arrow-parens": ["error", "always"],
         "brace-style": ["error", "1tbs"],
         "indent": ["error", "tab"],
-        "linebreak-style": ["error", "unix"],
+        "linebreak-style": ["off"],
         "no-prototype-builtins": "off",
         "quotes": [
             "error",
